<resources>
    <string name="app_name">BlogApp</string>
    <string name="title_app">Blog App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confrim">Confirm Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="user_info">User Info</string>
    <string name="select_photo">Select Photo</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="continuee">Continue</string>
    <string name="ferrian">Ferrian R Pratama</string>
    <string name="date">June 13</string>
    <string name="lorem">lorem ipsum bla sdik lorem ipsum bla sdik lorem ipsum bla sdik lorem ipsum bla sdik</string>
    <string name="like">12 Likes</string>
    <string name="allcomment">View all 3 comments</string>
    <string name="newpost">New Post</string>
    <string name="changephoto">Change Photo</string>
    <string name="post">Post</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="updatepost">Update Post</string>
    <string name="save">Save</string>
</resources>
