<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPostActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        app:title="">

        <ImageButton
            android:id="@+id/btn_addpost_backtoolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black"
            android:background="@android:color/transparent"
            android:layout_marginEnd="12dp"
            android:tint="@color/colorBlack"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newpost"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"/>


    </com.google.android.material.appbar.MaterialToolbar>

    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="6dp">

            <ImageView
                android:id="@+id/iv_addpost_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:src="@color/colorLightGrey"
                android:adjustViewBounds="true"/>

            <TextView
                android:id="@+id/tv_addpost_changephoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changephoto"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="20dp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/et_addpost_desc"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:inputType="textMultiLine"
                android:gravity="end"
                android:textSize="14sp"
                android:padding="8dp"
                android:background="@drawable/bg_desc_newpost"/>

            <Button
                android:id="@+id/btn_addpost_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post"
                android:background="@drawable/rounded_btn"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:textAllCaps="false"/>

        </LinearLayout>
        
    </ScrollView>
    
</LinearLayout>